[tool.poetry]
name = "python-ags4"
version = "0.4.1"
description = "A library to read, write, and check AGS4 files using Pandas DataFrames"
authors = ["Asitha Senanayake <asitha_sena@yahoo.com>"]
license = "LGPL-3.0"
readme = "README.md"
homepage = "https://github.com/asitha-sena/python-AGS4"
repository = "https://gitlab.com/ags-data-format-wg/ags-python-library"

[tool.poetry.dependencies]
python = ">=3.9"
pandas = "^2.1.3"
openpyxl = "^3.1.2"
defusedxml = "^0.7.1"
click = "^8.1.7"
rich = "^13.7.0"
numpy = "^1.26.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
toml = "^0.10.2"

[tool.poetry.scripts]
ags4_cli = "python_ags4.ags4_cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
